--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,7 @@ jobs:
         run: |
           which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
           eval $(ssh-agent -s)
-          ssh-add << EOF
-          ${{ secrets.SSH_PRIVATE_KEY }}
-          EOF
+          ssh-add < (echo "$SSH_PRIVATE_KEY")
           mkdir -p ~/.ssh
           [[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
           ~/.composer/vendor/bin/envoy run deploy
