--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
           eval $(ssh-agent -s)
-          (echo "$SSH_PRIVATE_KEY") | ssh-add
+          ssh-add $SSH_PRIVATE_KEY
           mkdir -p ~/.ssh
           [[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
           ~/.composer/vendor/bin/envoy run deploy
