--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,6 @@ jobs:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Deploy
-        run: ~/.composer/vendor/bin/envoy run deploy
+        run: |
+          composer global require "laravel/envoy=~1.0"
+          ~/.composer/vendor/bin/envoy run deploy
