--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,6 @@ jobs:
 
       - name: Deploy
         run: |
-          echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+          echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
           composer global require "laravel/envoy=~1.0"
           ~/.composer/vendor/bin/envoy run deploy
