--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
         run: |
           composer global require "laravel/envoy=~1.0"
           mkdir -p ~/.ssh
-          echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile /dev/null\n\n" > ~/.ssh/config
+          ssh-keyscan t22.tfcis.org >> ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
+          # echo -e "Host *\n\tStrictHostKeyChecking no\n\tUserKnownHostsFile /dev/null\n\n" > ~/.ssh/config
           eval `ssh-agent -s`
           echo "$PRIV" | ssh-add -
           ~/.composer/vendor/bin/envoy run deploy
