--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,18 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="V-SDGs Backend"
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_DEBUG=false
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
 DB_DATABASE=sdgs
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=db
+DB_PASSWORD=db
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
